removed hidden overflow to try fix bug not showing quiz content correctly on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@
 
 body {
   min-height: 100vh;
-  overflow: hidden;
   width: 100%;
 }
 
